# AiChat

./: .env.example  .gitignore  =0.10.1  =2.0.0  =2.1.0  CLAUDE.md  README.md  README_STARTUP.md  TEST_STATUS.md  database.py  docker-compose.yml  environment.yml  event_system.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  routes.json  start_backend.bat  start_backend.py  start_gui.bat  start_gui.py  vtuber.db
.claude/: settings.local.json
.github/workflows/: ci.yml
aichat/: __init__.py
aichat/backend/: __init__.py  main.py
aichat/cli/: __init__.py  backend.py  frontend.py  main.py  training.py
aichat/constants/: __init__.py  paths.py
aichat/core/: __init__.py  config.py  database.py  event_system.py
aichat/frontend/: GUI_WIREFRAME_ARCHITECTURE.md  PYGUI_README.md  api_client.py  gui.py  streamlit_app.py  tkinter_voice_gui.py
aichat/models/: __init__.py  schemas.py
aichat/tools/: webhook_receiver.py
aichat/training/: README.md  __init__.py  audio_processor.py  train_voice.py
backend/: main.py
backend/chat_app/: docker-compose.yml  main.py  setup.py
backend/tts_finetune_app/: Dockerfile  __init__.py  audio_processor.py  run_dev.ps1  run_dev.sh  train_voice.py
constants/: paths.py
envs/chat_app/: environment.yml
envs/tts_finetune_app/: environment.yml
frontend/: gui.py
frontend/components/: chat_tab.py  config_tab.py  logs_tab.py  status_tab.py  websocket_handler.py
scripts/: README.md  create_envs.sh
scripts/debug/: __init__.py  debug_api_character_list.py  debug_api_error.py  debug_chat_error.py  debug_db_detailed.py  debug_db_operations.py  debug_example_test.py  debug_frontend_startup.py
scripts/examples/: test_database_init.py  (+4 more)
settings/: test_invalid.json
src/: IMPLEMENTATION_PLAN.md  README.md  config.py  docker-compose.yml  event_system.py  start_gui.py
tests/: MIGRATION_PLAN.md  README.md  conftest.py  pytest.ini  test_api_endpoints.py  test_integration.py
tools/: debug_import_gui.py  run_feed_audio_test.py  run_process_audio_stream_chunk_test.py  run_transcribe_test.py  webhook_receiver.py
(+287 files in other folders)
